# ChangeLog for dev-php5/xdebug
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.17 2007/10/28 12:11:14 jokey Exp $

*xdebug-2.0.1 (28 Oct 2007)

  28 Oct 2007; Markus Ullmann <jokey@gentoo.org> +xdebug-2.0.1.ebuild:
  Version bump from php project overlay

  27 Oct 2007; Jakub Moc <jakub@gentoo.org> +xdebug-2.0.1.ebuild:
  Version bump

  11 Sep 2007; Christian Hoffmann <hoffie@gentoo.org> xdebug-2.0.0.ebuild:
  adjusting xdebug.profiler_output_name and xdebug.trace_output_name to fit
  new upstream default values as per bug 192212

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -xdebug-2.0.0_rc3.ebuild,
  -xdebug-2.0.0_rc4.ebuild:
  Cleanup

*xdebug-2.0.0 (16 Aug 2007)

  16 Aug 2007; Christian Hoffmann <hoffie@gentoo.org>
  +xdebug-2.0.0.ebuild:
  version bump wrt bug 186167

*xdebug-2.0.0_rc4 (30 Jun 2007)

  30 Jun 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +xdebug-2.0.0_rc4.ebuild:
  Version bump, closing bug #180109.

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> xdebug-2.0.0_rc3.ebuild:
  Fix DEPs.

*xdebug-2.0.0_rc3 (08 Mar 2007)

  08 Mar 2007; Luca Longinotti <chtekk@gentoo.org> -xdebug-2.0.0_rc1.ebuild,
  -xdebug-2.0.0_rc2.ebuild, +xdebug-2.0.0_rc3.ebuild:
  Version bump, cleanup.

*xdebug-2.0.0_rc2 (30 Dec 2006)

  30 Dec 2006; Konstantin V. Arkhipov <voxus@gentoo.org>
  +xdebug-2.0.0_rc2.ebuild:
  Version bump.

  27 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  xdebug-2.0.0_rc1.ebuild:
  Fix bug #153019.

  24 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -xdebug-2.0.0_beta6.ebuild, xdebug-2.0.0_rc1.ebuild:
  Clean up old versions. Enable build of debugclient, closes bug #152589.

*xdebug-2.0.0_rc1 (09 Oct 2006)

  09 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +xdebug-2.0.0_rc1.ebuild:
  Version bump.

*xdebug-2.0.0_beta6 (04 Jul 2006)

  04 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>