@@ -1,3 +1,0 @@
-MD5 d942de6225c5a06de7f693b672a44429 xdebug-2.0.1.tgz 279058
-RMD160 a958601000e9d02d20bdd773373befb867ba21b0 xdebug-2.0.1.tgz 279058
-SHA256 e844ee49637b731053bfda07670a9711a572ac7ad84d87ff889785432ebfa260 xdebug-2.0.1.tgz 279058
