@@ -1,0 +1,3 @@
+MD5 b994465f9941db4e7ffa4f8b81fa5c3d xdebug-2.0.2.tgz 279621
+RMD160 c9477d1e760ba9b7a5a8322a3e306d00a0321788 xdebug-2.0.2.tgz 279621
+SHA256 2cee0c176d9cea4d20bea3d57e46f92fa09cf38f678659dd0022e789dcee0bc0 xdebug-2.0.2.tgz 279621
