@@ -1,6 +1,15 @@
 # ChangeLog for dev-php5/xdebug
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.17 2007/10/28 12:11:14 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.18 2007/11/15 19:21:02 jokey Exp $
+
+*xdebug-2.0.2 (15 Nov 2007)
+
+  15 Nov 2007; Markus Ullmann <jokey@gentoo.org> -xdebug-2.0.0.ebuild,
+  -xdebug-2.0.1.ebuild, +xdebug-2.0.2.ebuild:
+  Version bump from project overlay
+
+  12 Nov 2007; Jakub Moc <jakub@gentoo.org> +xdebug-2.0.2.ebuild:
+  Version bump
 
 *xdebug-2.0.1 (28 Oct 2007)
 
